--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -13,7 +13,7 @@
             <a class="button" id="prev-chart" *ngIf="lastChart" [routerLink]="['..', lastChart]">Previous</a>
             <a class="button" id="next-chart" *ngIf="nextChart" [routerLink]="['..', nextChart]">Next</a>
         </div>
-        <table>
+        <table class="song-table">
             <tr>
                 <th>Pos</th>
                 <th>Last Week</th>
