--- a/ui/src/app/modals/modal-template/modal-template.component.scss
+++ b/ui/src/app/modals/modal-template/modal-template.component.scss
@@ -16,11 +16,10 @@ a {
   flex-direction: column;
   border: none;
   text-align: center;
-}
-
-.modal-title {
   width: 100%;
+  font-size: 2rem;
   color: black;
+  padding: 0.5rem 0
 }
 
 .modal-body {
@@ -28,5 +27,37 @@ a {
 }
 
 .modal-footer {
-  border-top: none;
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-content {
+  border: 0.1rem solid black;
+  background-color: white;
+  border-radius: 0.5rem;
+}
+
+.grey-out {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.button {
+  color: white;
+  padding: 0.4rem 0;
+  background-color: black;
+  width: 7.5rem;
+  margin: 0 0.5rem 0 0;
+  text-align: center;
+  text-decoration: none;
+}
+
+.button:hover {
+  background-color: rgb(46, 46, 46);
+  cursor: pointer;
 }
