--- a/ui/src/app/artist-display/artist-display.component.css
+++ b/ui/src/app/artist-display/artist-display.component.css
@@ -64,6 +64,11 @@ table .table-item:hover {
   padding: 0 1rem;
 }
 
+button {
+  width: 15rem;
+  margin-top: 0.5rem
+}
+
 /* Dropdown Button */
 .dropbtn {
     background-color: #04AA6D;
