--- a/ui/src/app/song-display/song-display.component.css
+++ b/ui/src/app/song-display/song-display.component.css
@@ -130,6 +130,11 @@
   flex-wrap: wrap;
 }
 
+button {
+  width: 15rem;
+  margin-top: 0.5rem
+}
+
 /* Dropdown Button */
 .dropbtn {
     background-color: #04AA6D;
