--- a/ui/src/app/styles/common-styles.css
+++ b/ui/src/app/styles/common-styles.css
@@ -25,3 +25,18 @@
     margin: 1rem 0;
     padding: 0 1rem;
 }
+
+button, .button {
+    color: white;
+    padding: 0.4rem;
+    background-color: black;
+    width: 7.5rem;
+    margin: 0 0.5rem 0 0;
+    text-align: center;
+    text-decoration: none;
+}
+
+button:hover, .button:hover {
+    background-color: rgb(46, 46, 46);
+    cursor: pointer;
+}
