--- a/ui/src/app/totals/totals.component.css
+++ b/ui/src/app/totals/totals.component.css
@@ -2,17 +2,10 @@ table, th, td{
     border: 1px solid blue
 }
 
-button {
-    color: white;
-    padding: 0.4rem;
-    background-color: black;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: rgb(46, 46, 46)
-}
-
 button:disabled {
+    background-color: grey;
+}
+
+button:disabled:hover {
     background-color: grey;
 }
