cause tests to pass after styling changes

--- a/ui/src/app/series-select/series-select.component.html
+++ b/ui/src/app/series-select/series-select.component.html
@@ -1,4 +1,4 @@
-<a class="right" routerLink="new">
+<a class="right">
     <div class="button" (click)="openModal()">
         Create new series
     </div>
