--- a/ui/src/app/chart-select/chart-select.component.css
+++ b/ui/src/app/chart-select/chart-select.component.css
@@ -24,4 +24,27 @@ a {
 .row {
     display: flex;
     margin: 1rem 0;
+    align-items: center;
+}
+
+.toggle {
+    color: white;
+    padding: 0.4rem;
+    background-color: rgb(140, 140, 140);
+    width: 7.5rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+.toggle:hover {
+    background-color: rgb(46, 46, 46);
+    cursor: pointer;
+}
+
+.toggle-selected {
+    background-color: black;
+}
+
+p {
+    margin-right: 0.5rem;
 }
