--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -13,6 +13,7 @@
             <a class="button" id="prev-chart" *ngIf="lastChart" [routerLink]="['..', lastChart]">Previous</a>
             <a class="button" id="next-chart" *ngIf="nextChart" [routerLink]="['..', nextChart]">Next</a>
         </div>
+        <p class="button" (click)="setChartSize(40)">Top 40</p>
         <table class="song-table">
             <tr>
                 <th>Pos</th>
