add loading icon to pages currently displaying 'loading' text

--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -56,4 +56,4 @@
 
 <delete-item-modal #deleteItemModal></delete-item-modal>
 
-<ng-template #loading>Loading...</ng-template>
+<ng-template #loading><mat-spinner></mat-spinner></ng-template>
