--- a/ui/src/app/song-display/song-display.component.html
+++ b/ui/src/app/song-display/song-display.component.html
@@ -87,6 +87,6 @@
     </ng-container>
 </div>
 
-<ng-template #loading>Loading...</ng-template>
+<ng-template #loading><mat-spinner></mat-spinner></ng-template>
 
 <mark-duplicate-modal #markDuplicateModal></mark-duplicate-modal>
