--- a/ui/src/app/artist-display/artist-display.component.html
+++ b/ui/src/app/artist-display/artist-display.component.html
@@ -39,21 +39,19 @@
                 <th>Peak</th>
             </tr>
             <ng-container *ngFor="let song of artistInfo.songs">
-                <ng-container *ngIf="song.charts[selectedSeries]">
-                    <tr>
-                        <td class="table-item text-center pad"><a [routerLink]="['/series', selectedSeries, 'chart', song.charts[selectedSeries][0].chart]">{{song.charts[selectedSeries][0].chart}}</a></td>
-                        <td class="table-item">
-                            <a [routerLink]="['/song', song._id]">
-                                <div class="song-title">
-                                    <div><b>{{song.title}}</b></div>
-                                    <div><i>{{song.artistDisplay}}</i></div>
-                                </div>
-                            </a>
-                        </td>
-                        <td class="text-center">{{song.charts[selectedSeries].length}}</td>
-                        <td class="text-center">{{song.peak}}</td>
-                    </tr>
-                </ng-container>
+                <tr>
+                    <td class="table-item text-center pad"><a [routerLink]="['/series', selectedSeries, 'chart', song.debut]">{{song.debut}}</a></td>
+                    <td class="table-item">
+                        <a [routerLink]="['/song', song._id]">
+                            <div class="song-title">
+                                <div><b>{{song.title}}</b></div>
+                                <div><i>{{song.artistDisplay}}</i></div>
+                            </div>
+                        </a>
+                    </td>
+                    <td class="text-center">{{song.weeksOn}}</td>
+                    <td class="text-center">{{song.peak}}</td>
+                </tr>
             </ng-container>
         </table>
         <button (click)="copyChartHistory()">Copy BBCode To Clipboard</button>
