move series determination into backend

--- a/ui/src/app/artist-display/artist-display.component.html
+++ b/ui/src/app/artist-display/artist-display.component.html
@@ -22,9 +22,9 @@
 
     <div>
         Selected Series:
-        <select *ngIf="chartSelectOptions" [(ngModel)]="selectedSeries" (click)="reloadArtist()">
-            <ng-container *ngFor="let chart of chartSelectOptions">
-                <option>{{chart}}</option>
+        <select *ngIf="artistInfo.series" [(ngModel)]="selectedSeries" (click)="reloadArtist()">
+            <ng-container *ngFor="let series of artistInfo.series">
+                <option>{{series}}</option>
             </ng-container>
         </select>
     </div>
