--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="top-navbar">
-  <h1>Chart Site</h1>
+  <h1><a routerLink="/">Chart Site</a></h1>
   <ul>
     <li><a routerLink="/series">Series</a></li>
     <li><a routerLink="/song">Songs</a></li>
