--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,3 +1,12 @@
 <h1>Welcome to the Personal Chart App!</h1>
 
 <h2>Recent Charts</h2>
+
+<ng-container *ngFor="let chart of recentCharts">
+    <a [routerLink]="['/series', chart.series, '/chart', chart.name]">
+        <div class="select-option">
+            <div><b>{{chart.name}}</b></div>
+            <div><i>{{chart.series}}</i></div>
+        </div>
+    </a>
+</ng-container>
