--- a/ui/src/app/styles/common-styles.css
+++ b/ui/src/app/styles/common-styles.css
@@ -40,3 +40,7 @@ button:hover, .button:hover {
     background-color: rgb(46, 46, 46);
     cursor: pointer;
 }
+
+.text-center {
+    text-align: center;
+}
