--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -1,5 +1,11 @@
 <div class="row right">
-    <div (click)="copyPlaintext()" title="Copy Chart"><fa-icon [icon]="faCopy" class="fa-lg"></fa-icon></div>
+    <div class="dropdown">
+        <fa-icon [icon]="faCopy" class="fa-lg"></fa-icon>
+        <div class="dropdown-content">
+            <div class="dropdown-option" (click)="copyPlaintext()">Copy Plaintext Chart</div>
+            <div class="dropdown-option" (click)="copyBBCode()">Copy BBCode Chart</div>
+        </div>
+    </div>
     <a routerLink="./edit" title="Edit Details"><fa-icon [icon]="faPenSquare" class="fa-lg"></fa-icon></a>
     <div (click)="openModal()" title="Delete Chart"><fa-icon [icon]="faTrash" class="fa-lg"></fa-icon></div>
     <a [routerLink]="['..', 'new']" title="Upload New Chart"><fa-icon [icon]="faPlus" class="fa-lg"></fa-icon></a>
