--- a/ui/src/app/styles/common-styles.css
+++ b/ui/src/app/styles/common-styles.css
@@ -44,3 +44,34 @@ button:hover, .button:hover {
 .text-center {
     text-align: center;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 185px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0rem
+}
+
+/* Links inside the dropdown */
+.dropdown-content .dropdown-option {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content .dropdown-option:hover {background-color: #ddd; cursor: pointer;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
