correct rendering of peak/weeks on

--- a/ui/src/app/song-display/song-display.component.html
+++ b/ui/src/app/song-display/song-display.component.html
@@ -50,8 +50,8 @@
                     <td>Peak Position</td>
                 </tr>
                 <tr>
-                    <td>{{weeksOn}}</td>
-                    <td>{{peak}}</td>
+                    <td>{{songInfo.weeksOn}}</td>
+                    <td>{{songInfo.peak}}</td>
                 </tr>
             </table>
         </div>
