include text box for number of weeks

--- a/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
+++ b/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
@@ -4,7 +4,7 @@
     <div class="centre">
         <label>
             <input type="checkbox" formControlName="includeSongs">
-            All songs from the past X weeks
+            All songs from the past <input type="text" value="1" formControlName="numberOfWeeks"> weeks
         </label>
     </div>
     <div class="input-option">
