get previous charts as requested by ui

--- a/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
+++ b/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
@@ -18,7 +18,7 @@
     <div class="centre">
         <label>
             <input type="checkbox" formControlName="includeSongs">
-            Include all songs from the past <input type="text" value="1" formControlName="numberOfWeeks"> charts
+            Include all songs from the past <input type="number" value="1" formControlName="numberOfCharts"> charts
         </label>
     </div>
     <div class="input-option">
