move to rank songs page when chart is entered

--- a/ui/src/app/create-chart-interactive/create-chart-interactive.component.html
+++ b/ui/src/app/create-chart-interactive/create-chart-interactive.component.html
@@ -1,1 +1,2 @@
-<app-enter-songs [seriesName]="seriesName"></app-enter-songs>
+<app-enter-songs *ngIf="screenToDisplay == 'enter'" [seriesName]="seriesName" (sessionIdEvent)="moveToRanking($event)"></app-enter-songs>
+<app-rank-songs *ngIf="screenToDisplay == 'rank'" [sessionId]="sessionId"></app-rank-songs>
