--- a/ui/src/app/create-chart-finalise/create-chart-finalise.component.html
+++ b/ui/src/app/create-chart-finalise/create-chart-finalise.component.html
@@ -1,1 +1,34 @@
-<p>create-chart-finalise works!</p>
+<div class="centre">
+    <h1>Finalise Chart</h1>
+    <ng-container *ngIf="chartPreview; else loading">
+        <table class="song-table">
+            <tr>
+                <th>Pos</th>
+                <th>Last Week</th>
+                <th>Song</th>
+                <th>Peak</th>
+                <th>Weeks</th>
+            </tr>
+            <ng-container *ngFor="let song of chartPreview.songs">
+                <tr class="select-option">
+                    <td class="text-center">{{song.position}}</td>
+                    <td class="text-center">{{song.lastWeek || (song.weeksOn > 1 ? 'RE' : 'NEW')}}</td>
+                    <td>
+                        <div class="song-title">
+                            <div><b>{{song.title}}</b></div>
+                            <div><i>{{song.artistDisplay}}</i></div>
+                        </div>
+                    </td>
+                    <td class="text-center">{{song.peak}}</td>
+                    <td class="text-center">{{song.weeksOn}}</td>
+                </tr>
+            </ng-container>
+        </table>
+    </ng-container>
+    <div class="row">
+        <button>Submit</button>
+        <button>Go Back</button>
+    </div>
+</div>
+
+<ng-template #loading><mat-spinner></mat-spinner></ng-template>
