only count top x songs

--- a/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
+++ b/ui/src/app/create-chart-interactive/enter-songs/enter-songs.component.html
@@ -17,6 +17,11 @@
     </div>
     <div class="centre">
         <label>
+            Count the top <input type="number" value="40" formControlName="cutOffNumber"> songs in the chart
+        </label>
+    </div>
+    <div>
+        <label>
             <input type="checkbox" formControlName="includeSongs">
             Include all songs from the past <input type="number" value="1" formControlName="numberOfCharts"> charts
         </label>
