styling and routing for new component

--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -8,7 +8,7 @@
     </div>
     <a routerLink="./edit" title="Edit Details"><fa-icon [icon]="faPenSquare" class="fa-lg"></fa-icon></a>
     <div (click)="openModal()" title="Delete Chart"><fa-icon [icon]="faTrash" class="fa-lg"></fa-icon></div>
-    <a [routerLink]="['..', 'new']" title="Upload New Chart"><fa-icon [icon]="faPlus" class="fa-lg"></fa-icon></a>
+    <a [routerLink]="['..', 'new', 'basic']" title="Upload New Chart"><fa-icon [icon]="faPlus" class="fa-lg"></fa-icon></a>
 </div>
 <div class="centre">
     <a routerLink="../">
