--- a/ui/src/app/create-chart/create-chart.component.html
+++ b/ui/src/app/create-chart/create-chart.component.html
@@ -1,8 +1,8 @@
-<div class="top-navbar">
-  <ul>
-    <li><a routerLink="./basic">Basic</a></li>
-    <li><a routerLink="./interactive">Interactive</a></li>
-  </ul>
+<div class="centre">
+  <div class="row">
+    <a routerLink="./basic"><button>Basic</button></a>
+    <a routerLink="./interactive"><button>Interactive</button></a>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
