--- a/ui/src/app/chart-select/chart-select.component.html
+++ b/ui/src/app/chart-select/chart-select.component.html
@@ -1,5 +1,5 @@
 <h1>{{seriesName}}</h1>
-<a class="right" routerLink="new">
+<a class="right" routerLink="new/basic">
     <div class="button">
         Upload new chart
     </div>
